# APF-Paper-4-Admissibility-Constraints-Field-Content

./: APF_Reviewer_Walkthrough.ipynb  Paper_4_Admissibility_Constraints_Field_Content_Supplement_v1.0.tex  Paper_4_Admissibility_Constraints_Field_Content_v2.0.tex  README.md  REVIEWERS_GUIDE.md  START_HERE.md  derivation_graph.json  interactive_dag.html  pyproject.toml  repo_map.json  run_checks.py  theorems.json  zenodo.json
ai_context/: AGENTS.md  ARGUMENT_FLOW.md  CITING.md  CLAIMS_LEDGER.md  DO_NOT_CLAIM.md  HOW_TO_VERIFY.md  LOCAL_VS_IMPORTED.md  PAPER_LINEAGE.md  STARTING_PROMPTS.md  THEOREMS.md  derivation_graph.json  repo_map.json  theorems.json
apf/: __init__.py  bank.py  core.py
docs/: index.html
